# physx-rs

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  physx-rs.code-workspace  physx.patch  regen.sh  xwin.sh
.cargo/: config
.ci/: test.sh
.github/: CODEOWNERS
.github/workflows/: ci.yaml
physx/: CHANGELOG.md  Cargo.toml  README.md  migration-4-5.md  release.toml
physx-macros/: Cargo.toml  README.md
physx-macros/src/: lib.rs
physx-sys/: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-BSD  README.md  build.rs  cc.rs  cmake.rs  make-sources.sh  migration-4-5.md  out.txt  release.toml  sub-patch.sh  update-physx.sh
physx-sys/PhysX/physx/source/physx/src/: NpSceneQueries.cpp
physx-sys/examples/: ball.rs
physx-sys/physx-hacks/VisualStudio/: typeinfo.h
physx-sys/pxbind/: .clang-format  CMakeLists.txt  Cargo.toml  api.cpp  args.txt  build.sh  main.cpp  run-aarch64-linux.sh  run.sh  run_android.sh
physx-sys/pxbind/src/: consumer.rs  dump.rs  gen.rs  generator.rs  lib.rs  main.rs
physx-sys/pxbind/src/consumer/: enums.rs  functions.rs  record.rs  templates.rs
physx-sys/pxbind/src/generator/: comment.rs  enums.rs  functions.rs  record.rs
physx-sys/pxbind/tests/: enums.rs  functions.rs  methods.rs  records.rs  structgen.hpp  structgen.rs
physx-sys/pxbind/tests/data/: all_the_things.h  i32.h  u32.h
physx-sys/pxbind/tests/data/enum/: flags.h  i32.h  simple.h  u32.h
physx-sys/pxbind/tests/data/functions/: constructors.h  destructors.h  functions.h  methods_complex.h
physx-sys/pxbind/tests/data/record/: abstract.h  complex.h  ptr_only.h  ref_fields.h  simple_templates.h  templates.h
physx-sys/pxbind/tests/snapshots/: enums__flags.snap  enums__i32.snap  enums__i32.snap.new  enums__simple.snap  enums__simple.snap.new  enums__u32.snap  enums__u32.snap.new  functions__plain_functions-2.snap  functions__plain_functions.snap  methods__constructors-2.snap  methods__constructors.snap  methods__destructor-2.snap  methods__destructor.snap  methods__methods_complex-2.snap  methods__methods_complex.snap  records__abstract_-2.snap  records__abstract_-3.snap  records__abstract_.snap  records__complex-2.snap  records__complex-3.snap  records__complex.snap  records__ptr_only-3.snap  records__ptr_only.snap  records__ref_fields-2.snap  records__ref_fields-3.snap  records__ref_fields.snap  records__simple_templates-2.snap  records__simple_templates-3.snap  records__simple_templates.snap  records__templates-2.snap  records__templates-3.snap  records__templates.snap  structgen__all_the_things-2.snap  structgen__all_the_things-3.snap  structgen__all_the_things.snap  structgen__many_things-2.snap  structgen__many_things-3.snap  structgen__many_things.snap
physx-sys/pxbind2/: Cargo.toml  run.sh
physx-sys/pxbind2/src/: lib.rs
physx-sys/pxbind_old/: CMakeLists.txt
physx-sys/sources/: buffering  common  cooking  cooking_convex  cooking_mesh  core  extensions  extensions_binary  extensions_serialization  extensions_tet  extensions_xml  fastxml  foundation  foundation_unix  foundation_windows  geomutils  geomutils_ccd  geomutils_common  geomutils_contact  geomutils_convex  geomutils_cooking  geomutils_distance  geomutils_gjk  geomutils_hf  geomutils_intersection  geomutils_mesh  geomutils_pcm  geomutils_sweep  lowlevel_pipeline  lowlevel_software  lowlevelaabb  lowleveldynamics  physxcharacterkinematic  pvd  scenequery  simulationcontroller  task  vehicle  vehicle_metadata
physx-sys/src/: lib.rs  physx.cpp  physx_api.cpp  physx_generated.hpp  physx_generated.rs
physx-sys/src/structgen/: structgen.cpp  structgen.hpp
physx/examples/: assert_handler.rs  ball_physx.rs  error_callback.rs  profiler.rs  scene_queries.rs
physx/src/: actor.rs  aggregate.rs  articulation.rs  articulation_base.rs  articulation_cache.rs  articulation_joint.rs  articulation_joint_base.rs  articulation_joint_reduced_coordinate.rs  articulation_link.rs  articulation_reduced_coordinate.rs  base.rs  body.rs  bvh.rs  bvh_structure.rs  constraint.rs  controller.rs  controller_manager.rs  convex_mesh.rs  cooking.rs  foundation.rs  geometry.rs  height_field.rs  heightfield.rs  lib.rs  material.rs  math.rs  owner.rs  physics.rs  prelude.rs  pruning_structure.rs  px_type.rs  query.rs  rigid_actor.rs  rigid_body.rs  rigid_dynamic.rs  rigid_static.rs  scene.rs  shape.rs  simulation_event_callback.rs  traits.rs  (+4 more)
physx/src/math/: glam.rs  mod.rs  quat.rs  transform.rs  vec3.rs
physx/src/physics/: assert_handler.rs  error_callback.rs  profiler.rs
physx/src/traits/: class.rs  collidable.rs  descriptor.rs  get_raw.rs  mod.rs  releasable.rs  to_flags.rs  user_data.rs
physx/tests/: bug-180.rs
