[package]
name = "physx-macros"
description = "Utility macros used internally by the physx crate"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/physx-rs"
edition = "2018"
readme = "README.md"
keywords = ["physics"]
categories = [] 

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
