[package]
name = "physx-sys"
description = "Unsafe bindings for NVIDIA PhysX C++ SDK"
version = "0.8.1"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Tomasz Stachowiak <h3@h3.gd>",
]
# we need to wait until crates.io supports parentheses https://github.com/rust-lang/crates.io/issues/2595
#license = "(MIT OR Apache-2.0) AND BSD-3-Clause"
license-file = "LICENSE"
repository = "https://github.com/EmbarkStudios/physx-rs"
edition = "2018"
build = "build.rs"
readme = "README.md"
keywords = ["physics"]
categories = ["external-ffi-bindings", "simulation", "game-engines"]
exclude = [
    "PhysX/**/*.bat",
    "PhysX/**/*.html",
    "PhysX/**/*.sh",
    "PhysX/*demo/**/*",
    "PhysX/externals/cg-linux/**/*",
    "PhysX/externals/clang-physxmetadata/**/*",
    "PhysX/externals/glew-linux/**/*",
    "PhysX/externals/glew/**/*",
    "PhysX/externals/opengl-linux/**/*",
    "PhysX/externals/targa/**/*",
    "PhysX/externals/vswhere/**/*",
    "PhysX/physx/bin/**/*",
    "PhysX/physx/buildtools/**/*",
    "PhysX/physx/documentation/**/*",
    "PhysX/physx/samples/**/*",
    "PhysX/physx/snippets/**/*",
    "PhysX/physx/tools/**/*",
]

[lib]
doctest = false

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
structgen = []
profile = []
