[package]
name = "physx"
description = "High-level Rust interface for Nvidia PhysX"
version = "0.11.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/physx-rs"
edition = "2018"
readme = "README.md"
keywords = ["physics"]
categories = ["api-bindings", "simulation", "game-engines"]

[lib]
doctest = false

[dependencies]
physx-sys = { version = "0.4.10", path = "../physx-sys" }

enumflags2 = "0.6"
log = "0.4"
glam = { version = "0.13", optional = true }
thiserror = "1.0.20"

[features]
structgen = ["physx-sys/structgen"]
use-cmake = ["physx-sys/use-cmake"]
