[package]
name = "physx"
description = "High-level Rust interface for Nvidia PhysX"
version = "0.12.2"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/physx-rs"
edition = "2018"
readme = "README.md"
keywords = ["physics"]
categories = ["api-bindings", "simulation", "game-engines"]

[lib]
doctest = false

[dependencies]
physx-sys = { version = "0.4.10", path = "../physx-sys" }

enumflags2 = "0.7"
log = "0.4"
glam = { version = "0.20", optional = true }
thiserror = "1.0"

[features]
# During building of the sys crate, this additional program can be built which
# is used to autogenerate Rust code from the physx headers. Normal use of the
# physx crate would never need to use this feature.
structgen = ["physx-sys/structgen"]
# Uses physx's normal cmake process to build. By default cmake is not required
# and is built directly with cc instead
use-cmake = ["physx-sys/use-cmake"]
