[package]
name = "physx"
description = "High-level Rust interface for Nvidia PhysX"
version = "0.19.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbarkStudios/physx-rs"
edition = "2021"
readme = "README.md"
keywords = ["physics"]
categories = ["api-bindings", "simulation", "game-engines"]

[lib]
doctest = false

[features]
# During building of the sys crate, this additional program can be built which
# is used to autogenerate Rust code from the physx headers. Normal use of the
# physx crate would never need to use this feature.
structgen = ["physx-sys/structgen"]
# Enables `Debug` derivations for the FFI structures, which can be useful for
# print debugging
debug-structs = ["physx-sys/debug-structs"]

[dependencies]
physx-sys = { version = "0.11.5", path = "../physx-sys" }

bitflags = "1.3"
log = "0.4"
glam = { version = "0.23", optional = true }
thiserror = "1.0"
